# AaDS-AiSD-INF

./: CMakeLists.txt  test.c
ALA1/: AiSD1.c  mat.c  mat.h  matrix.c  matrix.h
ALA2/: AiSD2.c  functions.c  functions.h  queue.h  queue_list.c  queue_vector.c
ALA3/: AiSD3.c  AiSD3b.c  hash_table.c  htable.h  table.c  table.h
ALA4/: ART.h  AiSD4a.c  AiSD4b.c  B_tree.c  B_tree.h  adaptive_radix_tree.c  bitree.c  bitree.h  ffile.h  from_file.c
ALA5/: AiSD5.c  from_file.c  from_file.h  graph.c  graph.h  hash_table.c  htable.h  queue_priority.c  queue_prority.h
INF1/: Lab3.c  Lab4.c  Lab5.c  lab5T.c  lab6.c
